--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
 	  <b>University of Michigan </b> (2020-2024)
 	  <span style="float:right;"><i>Ann Arbor, MI</i></span>
 	  <ul>
-	    <li>Expected major in Creative Writing and Literature and  minors in Gender, Race, & Nation and Computer Science
+	    <li>Expected major in English and minors in Gender, Race, & Nation and Computer Science
 	  </ul>
 	  <b>Stuyvesant High School</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
 	  <ul>
 	    <li>Overall GPA: 3.8; Technical GPA: 4.00
-	    <li>Relevant Courses: Software Development, AP English Literature, Data Structures & Algorithms
+	    <li>Relevant Courses: Software Development, AP English Literature, World Literature, Data Structures & Algorithms
 	    <li>Activities:
 	      <a href="https://stuynaught.github.io/">Zero Robotics</a> co-captain,
 	      <a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager, StuyFem board director, Track & Field athlete, Google Mentorship program mentee, Red Cross volunteer
