--- a/essays.html
+++ b/essays.html
@@ -119,6 +119,9 @@
 	  <a href="https://github.com/yaruluo">
 	    <img src="img/footer/gh.png" height="30px;" width="30px;">
 	  </a>
+	  <a href="https://www.goodreads.com/user/show/118504126-yaru-luo">
+	    <img src="img/footer/gr.png" height="30px;" width="30px;">
+	  </a>
 	  <a href="mailto:yaruluo09@gmail.com">
 	    <img src="img/footer/gm.png" height="30px;" width="30px;">
 	  </a>
