--- a/index.html
+++ b/index.html
@@ -172,11 +172,6 @@
 	  <hr><br>
 	  <h2>Portfolio</h2>
 	  
-	  <h3>Written Work</h3>
-	  <a href="essays.html">Creative nonfiction</a>
-
-	  <h3>Senior Portrait</h3>
-	  
 	  <!-- <h3>Projects</h3> -->
 	  <!-- https://yaruluo.techscholars.repl.co/ -->
 	  <!-- http://p4.jckiesd.tech/ -->
@@ -208,6 +203,9 @@
 	    </a>
 	    <a href="https://github.com/yaruluo">
 	      <img src="img/footer/gh.png" height="30px;" width="30px;">
+	    </a>
+	    <a href="https://www.goodreads.com/user/show/118504126-yaru-luo">
+	      <img src="img/footer/gr.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="mailto:yaruluo09@gmail.com">
 	      <img src="img/footer/gm.png" height="30px;" width="30px;">
