updates icon to wave

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Yaru Luo</title>
     
-    <link rel="icon" href="img/icons/yl.png">
+    <link rel="icon" href="img/icons/wave.png">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     
