--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	  <hr><br>
 	  <h2>About me</h2>
 	  <p>
-	    Hey! My name is Yaru Luo, but you can call me Ru. I'm a freshman at the University of Michigan and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading Ursula le Guin, Virginia Woolf, and David Mitchell. It's nice to meet you!
+	    Hey! My name is Yaru Luo, but you can call me Ru. I'm a freshman at Pomona College and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading Ursula le Guin, Virginia Woolf, and David Mitchell. It's nice to meet you!
 	    <br><br>
 	  </p><br>
 	</div>
@@ -116,8 +116,8 @@
 	  <hr><br>
 	  <h2>Professional Summary</h2>
 	  <h3>Education</h3>
-	  <b>University of Michigan </b> (2020-2024)
-	  <span style="float:right;"><i>Ann Arbor, MI</i></span>
+	  <b>Pomona College </b> (2020-2024)
+	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <ul>
 	    <li>Expected major in English and minors in Gender, Race, & Nation and Computer Science
 	  </ul>
