--- a/index.html
+++ b/index.html
@@ -149,10 +149,23 @@
 	    <li>Assisted staff with constituent intakes, translating between Mandarin to English 
 	    <li>Attended community events and City Council meetings to record notes
 	  </ul>
+	  <b>P.S.53 U.A.U. Summer Camp</b> (2019-2019)
+	  <span style="float:right;"><i>New York City, NY</i></span>
+	  <br><i>Camp Counselor</i>
+	  <ul>
+	    <li>Supervised kids aged 6-8 over the summer
+	    <li>Implemented a tradition where my group performed an act of kindness every Friday (helping the cafeteria ladies, writing compliments on post-its to stick around school) 
+	  </ul>
+	  <b>New York Public Library -- New Dorp Library</b> (2016-2018)
+	  <span style="float:right;"><i>Staten Island, NY</i></span>
+	  <br><i>Tutor</i>
+	  <ul>
+	    <li>Tutored children from as young as Kindergarteners learning basic reading, to as old as eighth graders on homework help and SHSAT preparation
+	  </ul>
 
 	  <h3>Skills</h3>
 	  <ul>
-	    <li>Programming: Python, Java, JS, HTML/CSS, Flask
+	    <li>Programming: Python, Java, JS, HTML/CSS, Flask, Git, SQLAlchemy
 	    <li>Data Analysis: Pandas, Matlab, Plotly, Excel
 	    <li>Languages: Conversational Mandarin
 	  </ul>
