updates to pomona

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	  <hr><br>
 	  <h2>About me</h2>
 	  <p>
-	    Hey! I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm a freshman at Pomona College and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading Ursula le Guin, Virginia Woolf, and David Mitchell. It's nice to meet you!
+	    Hey! I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm a first-year at Pomona College and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading Ursula le Guin, Viet Thanh Nguyen, and Joan Didion. It's nice to meet you!
 	    <br><br>
 	  </p><br>
 	</div>
@@ -119,7 +119,9 @@
 	  <b>Pomona College </b> (2020-2024)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <ul>
-	    <li>Expected major in English and minors in Gender, Race, & Nation and Computer Science
+	    <li>Expected major in English and Physics
+	    <li>Activities:
+	      <a href="https://tsl.news/">The Student Life</a> manager & writer
 	  </ul>
 	  <b>Stuyvesant High School</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
@@ -132,6 +134,16 @@
 	  </ul>
 
 	  <h3>Experience</h3>
+
+	  <b>The Student Life</b> (2020-present)
+	  <span style="float:right;"><i>Claremont, CA</i></span>
+	  <br><i>Business Manager and Contributing Sports Columnist</i><br><br>
+
+	  <b>Pomona College Linguistics & Chinese Department</b> (2020-present)
+	  <span style="float:right;"><i>Claremont, CA</i></span>
+	  <br><i>Research Assistant</i><br><br>
+
+	  
 	  <b>The Stuyvesant Spectator</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
 	  <br><i>Business Manager</i>
