updates w college roles

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 	  <b>Pomona College </b> (2020-2024)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <ul>
-	    <li>Expected major in English and Physics
+	    <li>Expected majors in English and Physics
 	    <li>Activities:
-	      <a href="https://tsl.news/">The Student Life</a> manager & writer
+	      <a href="https://tsl.news/">The Student Life</a> manager & writer, The Women's Union member, research assistant
 	  </ul>
 	  <b>Stuyvesant High School</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
@@ -137,13 +137,24 @@
 
 	  <b>The Student Life</b> (2020-present)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
-	  <br><i>Business Manager and Contributing Sports Columnist</i><br><br>
-
+	  <br><i>Contributing Sports Columnist</i>
+	  <ul>
+	    <li>Wrote articles focusing on women in sports locally at the 5C college consortium and globally
+	    <li>Maintained a regular column about baseball
+	  </ul>
 	  <b>Pomona College Linguistics & Chinese Department</b> (2020-present)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
-	  <br><i>Research Assistant</i><br><br>
-
-	  
+	  <br><i>Research Assistant</i>
+	  <ul>
+	    <li>Assisted Professor Feng Xiao in creating a new course at Pomona College
+	    <li>Edited a volume of a journal project
+	  </ul>
+	  <b>The Student Life</b> (2020-present)
+	  <span style="float:right;"><i>Claremont, CA</i></span>
+	  <br><i>Business Manager</i>
+	  <ul>
+	    <li>Handled all finances of The Student Life
+	  </ul>
 	  <b>The Stuyvesant Spectator</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
 	  <br><i>Business Manager</i>
