--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 	  <ul>
 	    <li>Expected majors in English and Physics
 	    <li>Activities:
-	      <a href="https://tsl.news/">The Student Life</a> manager & writer, The Women's Union member, research assistant
+	      <a href="https://tsl.news/">The Student Life</a> manager & writer, The Women's Union staff member, admissions ambassador, research assistant
 	  </ul>
 	  <b>Stuyvesant High School</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
@@ -137,10 +137,8 @@
 
 	  <b>The Student Life</b> (2020-present)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
-	  <br><i>Contributing Sports Columnist</i>
+	  <br><i>Contributing Sports Columnist & Business Manager</i>
 	  <ul>
-	    <li>Wrote articles focusing on women in sports locally at the 5C college consortium and globally
-	    <li>Maintained a regular column about baseball
 	  </ul>
 	  <b>Pomona College Linguistics & Chinese Department</b> (2020-present)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
@@ -149,11 +147,15 @@
 	    <li>Assisted Professor Feng Xiao in creating a new course at Pomona College
 	    <li>Edited a volume of a journal project
 	  </ul>
-	  <b>The Student Life</b> (2020-present)
+	  <b>The Women's Union</b> (2020-present)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
-	  <br><i>Business Manager</i>
+	  <br><i>Staff Member</i>
 	  <ul>
-	    <li>Handled all finances of The Student Life
+	  </ul>
+	  <b>Pomona Office of Admissions</b> (2020-present)
+	  <span style="float:right;"><i>Claremont, CA</i></span>
+	  <br><i>Admissions Ambassador</i>
+	  <ul>
 	  </ul>
 	  <b>The Stuyvesant Spectator</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
