--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       	    <span id="first">Hi! I'm Yaru.</span><br><br><br>
       	    <span id="second">
       	      I'm a
-      	      <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "self-proclaimed Twitter addict."]'>
+      	      <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer."]'>
       	      </a>
       	    </span>
       	  </div>
@@ -106,7 +106,7 @@
 	  <hr><br>
 	  <h2>About me</h2>
 	  <p>
-	    Hey! I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm a first-year at Pomona College and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading Ursula le Guin, Viet Thanh Nguyen, and Joan Didion. It's nice to meet you!
+	    Hey! I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm a first-year at Pomona College and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading George Eliot, Ursula le Guin, and Chris Kraus. It's nice to meet you!
 	    <br><br>
 	  </p><br>
 	</div>
@@ -126,7 +126,7 @@
 	  <b>Stuyvesant High School</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
 	  <ul>
-	    <li>Overall GPA: 3.8; Technical GPA: 4.00
+	    <li>Overall GPA: 4.0; Technical GPA: 4.0
 	    <li>Relevant Courses: Software Development, AP English Literature, World Literature, Data Structures & Algorithms
 	    <li>Activities:
 	      <a href="https://stuynaught.github.io/">Zero Robotics</a> co-captain,
