updates for pomona spring semester

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 	  <ul>
 	    <li>Expected majors in English and Physics
 	    <li>Activities:
-	      <a href="https://tsl.news/">The Student Life</a> manager & writer, The Women's Union staff member, admissions ambassador, research assistant
+	      Physics mentor (PHYS042), Math grader (MATH032S), Attached writing center partner (CHNT164), <a href="https://tsl.news/">The Student Life</a> manager & writer, The Women's Union staff member, admissions ambassador, research assistant
 	  </ul>
 	  <b>Stuyvesant High School</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
@@ -139,23 +139,30 @@
 	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <br><i>Contributing Sports Columnist & Business Manager</i>
 	  <ul>
+	    <li>Conducted interviews with NCAA Division III coaches and athletes
+	    <li>Wrote features, news, and enterprise pieces for the sports department of the Claremont student-run newspaper, viewable <a href="https://tsl.news/author/ylac2020mymail-pomona-edu/">here</a>
+	    <li>Handled all finances of The Student Life newspaper
 	  </ul>
 	  <b>Pomona College Linguistics & Chinese Department</b> (2020-present)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <br><i>Research Assistant</i>
 	  <ul>
-	    <li>Assisted Professor Feng Xiao in creating a new course at Pomona College
-	    <li>Edited a volume of a journal project
+	    <li>Assisted Linguistics x Chinese Professor Feng Xiao in developing a course called “Chinese in the Working World”
+	    <li>Edited Volume 5 of a Chinese Teaching Journal
+	    <li>Conducted a scholarly literature search on second language acquisition
 	  </ul>
 	  <b>The Women's Union</b> (2020-present)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <br><i>Staff Member</i>
 	  <ul>
+	    <li>Hosted weekly office hours, an open space where visitors could safely talk, recharge, or simply relax
+	    <li>Organized “lunches” about current social justice and about relevant social engagement issues on the Claremont campus
 	  </ul>
 	  <b>Pomona Office of Admissions</b> (2020-present)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <br><i>Admissions Ambassador</i>
 	  <ul>
+	    <li>Introduced prospective students to the Pomona community, particularly the FLI and NYC groups
 	  </ul>
 	  <b>The Stuyvesant Spectator</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
@@ -166,6 +173,14 @@
 	    <li>Handled all finances of the Spectator 
 	    <li>Oversaw 30+ members of the business department 
 	  </ul>
+	  <b>Stuynaught Zero Robotics</b> (2018-2020)
+	  <span style="float:right;"><i>New York City, NY</i></span>
+	  <br><i>Co-captain</i>
+	  <ul>
+	    <li>Competed in a a robotics programming competition where the robots are SPHERES (Synchronized Position Hold Engage and Reorient Experimental Satellites) inside the International Space Station
+	    <li>Won the 2019 championships, where an astrunaut conducted the cde live in microgravity aboard the ISS
+	    <li>Competed against teams across the US and member states of the European Space Agency
+	  </ul>
 	  <b>New York City Council</b> (2018-2019)
 	  <span style="float:right;"><i>New York City, NY</i></span>
 	  <br><i>Intern for Council Member Margaret Chin</i>
@@ -173,6 +188,20 @@
 	    <li>Worked with government agencies to conduct policy and legislative research
 	    <li>Assisted staff with constituent intakes, translating between Mandarin to English 
 	    <li>Attended community events and City Council meetings to record notes
+	  </ul>
+	  <b>Google Mentorship Program</b> (2019-2019)
+	  <span style="float:right;"><i>New York City, NY</i></span>
+	  <br><i>Mentee</i>
+	  <ul>
+	    <li>Worked under the guidance of a Google software engineer to create an educational AI project
+	  </ul>
+	  <b>New-York Historical Society</b> (2019-2019)
+	  <span style="float:right;"><i>New York City, NY</i></span>
+	  <br><i>Tech Scholar</i>
+	  <ul>
+	    <li>Explored how women across the spectrum of race, class, and sexuality exercised power and effected change in history
+	    <li>Researched the legacies of historical figures that shaped the American experience through the 2019 displays in the museum, such as Stonewall50
+	    <li>Designed and built a digital project that displayed Keith Haring’s effect on the LGBTQ+, Art, & Nightlife communities
 	  </ul>
 	  <b>P.S.53 U.A.U. Summer Camp</b> (2019-2019)
 	  <span style="float:right;"><i>New York City, NY</i></span>
@@ -188,6 +217,13 @@
 	    <li>Tutored children from as young as Kindergarteners learning basic reading, to as old as eighth graders on homework help and SHSAT preparation
 	  </ul>
 
+	  <h3>Volunteerwork</h3>
+	  <ul>
+	    <li>JoyJ Homeless Coalition
+	    <li>Founded an activity over the summer of 2019 wherein I picked up used flowers from weddings, personally rearranged them, and donated them to senior centers and womens shelters
+	    <li>American Red Cross Blood Services
+	  </ul>
+
 	  <h3>Skills</h3>
 	  <ul>
 	    <li>Programming: Python, Java, JS, HTML/CSS, Flask, Git, SQLAlchemy
@@ -197,6 +233,7 @@
 
 	  <h3>Awards & Honors</h3>
 	  <ul>
+	    <li>2020 Greater New York Dollars for Scholars: New York Life Scholarship Award recipient
 	    <li>First Place Champions at the 2019 International Zero Robotics competition
 	    <li>Best Environmental Hack at ByteHacks, the largest all-women hackathon centered in NYC
 	  </ul>
