--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       	    <span id="first">Hi! I'm Yaru.</span><br><br><br>
       	    <span id="second">
       	      I'm a
-      	      <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer."]'>
+      	      <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "feminist."]'>
       	      </a>
       	    </span>
       	  </div>
@@ -245,7 +245,9 @@
 	<div class="projects" id="projects">
 
 	  <hr><br>
-	  <h2>Portfolio</h2>
+	  <h2>Art. Just for fun.</h2>
+	  <script src='https://embedsocial.com/js/iframe.js'></script> <iframe style='border: 0; width: 100%; height: 100%;' scrolling=no src='https://embedsocial.com/facebook_album/pro_hashtag/a5c6465cf50f70dd5090abb48d13c446cf558e42'></iframe><script>iFrameResize();</script>
+
 	  
 	  <!-- <h3>Projects</h3> -->
 	  <!-- https://yaruluo.techscholars.repl.co/ -->
