updates to sophomore

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       	    <span id="first">Hi! I'm Yaru.</span><br><br><br>
       	    <span id="second">
       	      I'm a
-      	      <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "feminist."]'>
+      	      <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "physicist", "feminist."]'>
       	      </a>
       	    </span>
       	  </div>
@@ -106,7 +106,7 @@
 	  <hr><br>
 	  <h2>About me</h2>
 	  <p>
-	    Hey! I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm a first-year at Pomona College and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading George Eliot, Ursula le Guin, and Chris Kraus. It's nice to meet you!
+	    Hey! I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm a second-year at Pomona College and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading George Eliot, Ursula le Guin, and Ocean Vuong. It's nice to meet you!
 	    <br><br>
 	  </p><br>
 	</div>
@@ -121,7 +121,7 @@
 	  <ul>
 	    <li>Expected majors in English and Physics
 	    <li>Activities:
-	      Physics mentor (PHYS042), Math grader (MATH032S), Attached writing center partner (CHNT164), <a href="https://tsl.news/">The Student Life</a> manager & writer, The Women's Union staff member, admissions ambassador, research assistant
+	      FLI (first-gen, low-income mentor), Physics mentor (PHYS042), Math grader (MATH032S), Attached writing center partner (CHNT164), <a href="https://tsl.news/">The Student Life</a> manager & writer, The Women's Union staff member, admissions ambassador, research assistant
 	  </ul>
 	  <b>Stuyvesant High School</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
@@ -143,7 +143,7 @@
 	    <li>Wrote features, news, and enterprise pieces for the sports department of the Claremont student-run newspaper, viewable <a href="https://tsl.news/author/ylac2020mymail-pomona-edu/">here</a>
 	    <li>Handled all finances of The Student Life newspaper
 	  </ul>
-	  <b>Pomona College Linguistics & Chinese Department</b> (2020-present)
+	  <b>Pomona College Linguistics & Chinese Department</b> (2020-2021)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <br><i>Research Assistant</i>
 	  <ul>
@@ -151,14 +151,14 @@
 	    <li>Edited Volume 5 of a Chinese Teaching Journal
 	    <li>Conducted a scholarly literature search on second language acquisition
 	  </ul>
-	  <b>The Women's Union</b> (2020-present)
+	  <b>The Women's Union</b> (20200-2021)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <br><i>Staff Member</i>
 	  <ul>
 	    <li>Hosted weekly office hours, an open space where visitors could safely talk, recharge, or simply relax
 	    <li>Organized “lunches” about current social justice and about relevant social engagement issues on the Claremont campus
 	  </ul>
-	  <b>Pomona Office of Admissions</b> (2020-present)
+	  <b>Pomona Office of Admissions</b> (20200-2021)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <br><i>Admissions Ambassador</i>
 	  <ul>
