--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       	    <span id="first">Hi! I'm Yaru.</span><br><br><br>
       	    <span id="second">
       	      I'm a
-      	      <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "physicist", "feminist."]'>
+      	      <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "physicist.", "feminist."]'>
       	      </a>
       	    </span>
       	  </div>
@@ -106,7 +106,7 @@
 	  <hr><br>
 	  <h2>About me</h2>
 	  <p>
-	    Hey! I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm a second-year at Pomona College and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading George Eliot, Ursula le Guin, and Ocean Vuong. It's nice to meet you!
+	    Hey! I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm a second-year at Pomona College and I'm from NYC. I like working with children, contributing to teams, marathon-training, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading George Eliot, Ursula le Guin, and Ocean Vuong. I'm passionate about homeless rights, fourth wave feminism, and FLI education. It's nice to meet you!
 	    <br><br>
 	  </p><br>
 	</div>
@@ -133,15 +133,13 @@
 	      <a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager, StuyFem board director, Track & Field athlete, Google Mentorship program mentee, Red Cross volunteer
 	  </ul>
 
-	  <h3>Experience</h3>
-
-	  <b>The Student Life</b> (2020-present)
+	  <h3>Research Experience</h3>
+	  <b>RAISE</b> (2021-2021)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
-	  <br><i>Contributing Sports Columnist & Business Manager</i>
+	  <br><i>Independent Researcher</i>
 	  <ul>
-	    <li>Conducted interviews with NCAA Division III coaches and athletes
-	    <li>Wrote features, news, and enterprise pieces for the sports department of the Claremont student-run newspaper, viewable <a href="https://tsl.news/author/ylac2020mymail-pomona-edu/">here</a>
-	    <li>Handled all finances of The Student Life newspaper
+	    <li>Sponsored by Pomona College to complete an independent student research project called the "Utility of STEM" under the guidance of Professor Elijah Quetin 
+	    <li>Researched the question "Why do we study how to get to Mars when there are problems on Earth that demand attention?" through the lens of science-fiction literature
 	  </ul>
 	  <b>Pomona College Linguistics & Chinese Department</b> (2020-2021)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
@@ -150,6 +148,32 @@
 	    <li>Assisted Linguistics x Chinese Professor Feng Xiao in developing a course called “Chinese in the Working World”
 	    <li>Edited Volume 5 of a Chinese Teaching Journal
 	    <li>Conducted a scholarly literature search on second language acquisition
+	  </ul>
+	   <b>New-York Historical Society</b> (2019-2019)
+	  <span style="float:right;"><i>New York City, NY</i></span>
+	  <br><i>Tech Scholar</i>
+	  <ul>
+	    <li>Explored how women across the spectrum of race, class, and sexuality exercised power and effected change in history
+	    <li>Researched the legacies of historical figures that shaped the American experience through the 2019 displays in the museum, such as Stonewall50
+	    <li>Designed and built a digital project that displayed Keith Haring’s effect on the LGBTQ+, Art, & Nightlife communities
+	  </ul>
+
+	  <h3>Work Experience</h3>
+	  <b>Main Street One</b> (2021-present)
+	  <span style="float:right;"><i>New York City, NY</i></span>
+	  <br><i>Digital Relational Organizer</i>
+	  <ul>
+	    <li>Conducted organic influencer recruitment and management
+	    <li>Specialized in socially conscious campaigns for companies, causes, and candidates with micro-influencers
+	    <li>Contributed to the Oregon Health Project on vaccinating the state of Oregon and the Hartford Insurance Project for small businesses recovering from teh pandemic
+	  </ul>
+	  <b>The Student Life</b> (2020-present)
+	  <span style="float:right;"><i>Claremont, CA</i></span>
+	  <br><i>Contributing Sports Columnist & Business Manager</i>
+	  <ul>
+	    <li>Conducted interviews with NCAA Division III coaches and athletes
+	    <li>Wrote features, news, and enterprise pieces for the sports department of the Claremont student-run newspaper, viewable <a href="https://tsl.news/author/ylac2020mymail-pomona-edu/">here</a>
+	    <li>Handled all finances of The Student Life newspaper
 	  </ul>
 	  <b>The Women's Union</b> (20200-2021)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
@@ -195,13 +219,17 @@
 	  <ul>
 	    <li>Worked under the guidance of a Google software engineer to create an educational AI project
 	  </ul>
-	  <b>New-York Historical Society</b> (2019-2019)
-	  <span style="float:right;"><i>New York City, NY</i></span>
-	  <br><i>Tech Scholar</i>
+
+
+	  <h3>Hands-on Jobs</h3>
+	  <b>Target</b> (2021-2021)
+	  <span style="float:right;"><i>Montclair, CA</i></span>
+	  <br><i>Market Teammember</i>
 	  <ul>
-	    <li>Explored how women across the spectrum of race, class, and sexuality exercised power and effected change in history
-	    <li>Researched the legacies of historical figures that shaped the American experience through the 2019 displays in the museum, such as Stonewall50
-	    <li>Designed and built a digital project that displayed Keith Haring’s effect on the LGBTQ+, Art, & Nightlife communities
+	    <li>Stocked and replenished merchandise according to store merchandising layouts in the market department
+	    <li> Learned clean and sanitary practices for safe food and beverage sales
+	    <li>Greeted customers and ascertained customers' needs
+	    <li>Cashiered when needed up front
 	  </ul>
 	  <b>P.S.53 U.A.U. Summer Camp</b> (2019-2019)
 	  <span style="float:right;"><i>New York City, NY</i></span>
