--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       	    <span id="first">Hi! I'm Yaru.</span><br><br><br>
       	    <span id="second">
       	      I'm a
-      	      <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "physicist.", "feminist."]'>
+      	      <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "writer.", "physicist.", "feminist."]'>
       	      </a>
       	    </span>
       	  </div>
@@ -106,12 +106,19 @@
 	  <hr><br>
 	  <h2>About me</h2>
 	  <p>
-	    Hey! I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm a second-year at Pomona College and I'm from NYC. I like working with children, contributing to teams, marathon-training, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading George Eliot, Ursula le Guin, and Ocean Vuong. I'm passionate about homeless rights, fourth wave feminism, and FLI education. It's nice to meet you!
+	    Hey! I'm so glad you're here! My name is Yaru Luo, but you can call me Ru. I'm from NYC and I'm a student studying English & Physics at Pomona College. I like working with children, drumming, snowboarding, contributing to teams, powerlifting, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading Toni Morrison, Ursula le Guin, and Yiyun Li. I'm passionate about fourth wave feminism and FLI education. It's nice to meet you!
 	    <br><br>
 	  </p><br>
 	</div>
 
 	<!-------------------- RESUME -------------------->
+
+
+	
+
+
+
+	
 	<div class="resume" id="resume">
 	  <hr><br>
 	  <h2>Professional Summary</h2>
@@ -119,28 +126,45 @@
 	  <b>Pomona College </b> (2020-2024)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <ul>
-	    <li>Expected majors in English and Physics
+	    <li>Overall GPA: 3.95
+	    <li>Double majors in English and Physics
 	    <li>Activities:
-	      FLI (first-gen, low-income mentor), Physics mentor (PHYS042), Math grader (MATH032S), Attached writing center partner (CHNT164), <a href="https://tsl.news/">The Student Life</a> manager & writer, The Women's Union staff member, admissions ambassador, research assistant
+	      FLI (first-gen, low-income mentor) mentor, Physics mentor, AAMP (Asian-American mentoring program) mentor, first-year sponsor, Attached writing center partner, The Women's Union staff member, research assistant
 	  </ul>
 	  <b>Stuyvesant High School</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
 	  <ul>
-	    <li>Overall GPA: 4.0; Technical GPA: 4.0
-	    <li>Relevant Courses: Software Development, AP English Literature, World Literature, Data Structures & Algorithms
+	    <li>Overall GPA: 4.00
+	    <li>Relevant Courses: Software Development, AP English Literature, AP Physics C, AP Calculus BC, AP Chemistry, World Literature, Data Structures & Algorithms
 	    <li>Activities:
 	      <a href="https://stuynaught.github.io/">Zero Robotics</a> co-captain,
 	      <a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager, StuyFem board director, Track & Field athlete, Google Mentorship program mentee, Red Cross volunteer
 	  </ul>
 
-	  <h3>Research Experience</h3>
-	  <b>RAISE</b> (2021-2021)
+	  <h3>STEM Experience</h3>
+	  <b>Air Force Research Laboratories</b> (2021-2021)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
+	  <br><i>Research Assistant</i>
+	  <ul>
+	    <li>Generated an electro-optic frequency comb in the RF and visible spectrums, focusing on low noise sources
+	    <li> Studied dual-comb interferograms for precision timing applications
+	  </ul>
+	  <b>Whitaker Labs</b> (2022-Present)
+	  <span style="float:right;"><i>Albuquerque, NM</i></span>
+	  <br><i>Biophysics Student Researcher</i>
+	  <ul>
+	    <li>Simulated sphagnum moss vortex ring spore dispersal in ANSYS to study the exploding capsule’s effect on the seeds’ gyroscopic mechanics, bursting pressure, capsule morphology, and vortex ring formation
+	    <li>Analyzed past students’ work on computational models of the explosions, carried out using 2-D large eddy simulations on FLUENT, which reproduced the observed motion of spore clouds observed with high-speed videos
+	  </ul>
+	  <b>RAISE</b> (2021-2021)
+	  <span style="float:right;"><i>Albuquerque, NM</i></span>
 	  <br><i>Independent Researcher</i>
 	  <ul>
 	    <li>Sponsored by Pomona College to complete an independent student research project called the "Utility of STEM" under the guidance of Professor Elijah Quetin 
-	    <li>Researched the question "Why do we study how to get to Mars when there are problems on Earth that demand attention?" through the lens of science-fiction literature
+	    <li>Researched the question "Why do we study how to get to Mars when there are problems on Earth that demand attention?" through the lens of science-fiction literature and philosophy
 	  </ul>
+
+	  <h3>Humanities Experience</h3>
 	  <b>Pomona College Linguistics & Chinese Department</b> (2020-2021)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <br><i>Research Assistant</i>
@@ -158,6 +182,8 @@
 	    <li>Designed and built a digital project that displayed Keith Haring’s effect on the LGBTQ+, Art, & Nightlife communities
 	  </ul>
 
+	  <!---
+	      
 	  <h3>Work Experience</h3>
 	  <b>Main Street One</b> (2021-present)
 	  <span style="float:right;"><i>New York City, NY</i></span>
@@ -175,14 +201,14 @@
 	    <li>Wrote features, news, and enterprise pieces for the sports department of the Claremont student-run newspaper, viewable <a href="https://tsl.news/author/ylac2020mymail-pomona-edu/">here</a>
 	    <li>Handled all finances of The Student Life newspaper
 	  </ul>
-	  <b>The Women's Union</b> (20200-2021)
+	  <b>The Women's Union</b> (2020-2021)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <br><i>Staff Member</i>
 	  <ul>
 	    <li>Hosted weekly office hours, an open space where visitors could safely talk, recharge, or simply relax
 	    <li>Organized “lunches” about current social justice and about relevant social engagement issues on the Claremont campus
 	  </ul>
-	  <b>Pomona Office of Admissions</b> (20200-2021)
+	  <b>Pomona Office of Admissions</b> (2020-2021)
 	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <br><i>Admissions Ambassador</i>
 	  <ul>
@@ -197,6 +223,9 @@
 	    <li>Handled all finances of the Spectator 
 	    <li>Oversaw 30+ members of the business department 
 	  </ul>
+
+	  ----->
+	  
 	  <b>Stuynaught Zero Robotics</b> (2018-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
 	  <br><i>Co-captain</i>
@@ -220,54 +249,34 @@
 	    <li>Worked under the guidance of a Google software engineer to create an educational AI project
 	  </ul>
 
-
-	  <h3>Hands-on Jobs</h3>
-	  <b>Target</b> (2021-2021)
-	  <span style="float:right;"><i>Montclair, CA</i></span>
-	  <br><i>Market Teammember</i>
-	  <ul>
-	    <li>Stocked and replenished merchandise according to store merchandising layouts in the market department
-	    <li> Learned clean and sanitary practices for safe food and beverage sales
-	    <li>Greeted customers and ascertained customers' needs
-	    <li>Cashiered when needed up front
-	  </ul>
-	  <b>P.S.53 U.A.U. Summer Camp</b> (2019-2019)
-	  <span style="float:right;"><i>New York City, NY</i></span>
-	  <br><i>Camp Counselor</i>
-	  <ul>
-	    <li>Supervised kids aged 6-8 over the summer
-	    <li>Implemented a tradition where my group performed an act of kindness every Friday (helping the cafeteria ladies, writing compliments on post-its to stick around school) 
-	  </ul>
-	  <b>New York Public Library -- New Dorp Library</b> (2016-2018)
-	  <span style="float:right;"><i>Staten Island, NY</i></span>
-	  <br><i>Tutor</i>
-	  <ul>
-	    <li>Tutored children from as young as Kindergarteners learning basic reading, to as old as eighth graders on homework help and SHSAT preparation
-	  </ul>
-
 	  <h3>Volunteerwork</h3>
 	  <ul>
 	    <li>JoyJ Homeless Coalition
 	    <li>Founded an activity over the summer of 2019 wherein I picked up used flowers from weddings, personally rearranged them, and donated them to senior centers and womens shelters
 	    <li>American Red Cross Blood Services
+	    <li>New York Public Library tutor
 	  </ul>
 
 	  <h3>Skills</h3>
 	  <ul>
-	    <li>Programming: Python, Java, JS, HTML/CSS, Flask, Git, SQLAlchemy
-	    <li>Data Analysis: Pandas, Matlab, Plotly, Excel
+	    <li>Programming: Python, Java, JS, HTML/CSS, Flask, Git, SQLAlchemy, LaTeX
+	    <li>Data Analysis: Mathematica, Pandas, Matlab, Plotly, Excel
 	    <li>Languages: Conversational Mandarin
 	  </ul>
 
 	  <h3>Awards & Honors</h3>
 	  <ul>
-	    <li>2020 Greater New York Dollars for Scholars: New York Life Scholarship Award recipient
+	    <li>2020 Greater New York Dollars for Scholars: New York Life scholarship award recipient
 	    <li>First Place Champions at the 2019 International Zero Robotics competition
 	    <li>Best Environmental Hack at ByteHacks, the largest all-women hackathon centered in NYC
+	    <li> 2021 Chia Family Foundation scholarship award recipient
 	  </ul>
 	</div>
 	
 	<br>
+
+
+	
 
 	<!-------------------- PORTFOLIO -------------------->
 	<div class="projects" id="projects">
@@ -316,7 +325,7 @@
 	      <img src="img/footer/gm.png" height="30px;" width="30px;">
 	    </a>
 	  </div>
-	  <br>&copy;Yaru Luo || 2020
+	  <br>&copy;Yaru Luo || 2023
 	</div>
 	
       </div>
