--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	    <li> Studied dual-comb interferograms for precision timing applications
 	  </ul>
 	  <b>Whitaker Labs</b> (2022-Present)
-	  <span style="float:right;"><i>Albuquerque, NM</i></span>
+	  <span style="float:right;"><i>Claremont, CA</i></span>
 	  <br><i>Biophysics Student Researcher</i>
 	  <ul>
 	    <li>Simulated sphagnum moss vortex ring spore dispersal in ANSYS to study the exploding capsule’s effect on the seeds’ gyroscopic mechanics, bursting pressure, capsule morphology, and vortex ring formation
