--- a/index.html
+++ b/index.html
@@ -133,11 +133,8 @@
 	      <b>Stuyvesant High School</b> (2016-2020)
 	      <span style="float:right;"><i>New York City, NY</i></span>
 	      <ul>
-		<li>Overall GPA: 4.00
-		<li>Relevant Courses: Software Development, AP English Literature, AP Physics C, AP Calculus BC, AP Chemistry, World Literature, Data Structures & Algorithms
-		<li>Activities:
-		  <a href="https://stuynaught.github.io/">Zero Robotics</a> co-captain,
-		  <a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager, StuyFem board director, Track & Field athlete, Google Mentorship program mentee, Red Cross volunteer
+		      <li>Activities:
+			<a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager, StuyFem board director, Track & Field athlete
 	      </ul>
 	    </div>
 	  </div>
@@ -173,7 +170,7 @@
 	      <br><i>Co-captain</i>
 	      <ul>
 		<li>Competed in a a robotics programming competition where the robots are SPHERES (Synchronized Position Hold Engage and Reorient Experimental Satellites) inside the International Space Station
-		<li>Won the 2019 championships, where an astrunaut conducted the cde live in microgravity aboard the ISS
+		<li>Won the 2019 championships, where an astrunaut conducted the code live in microgravity aboard the ISS
 		<li>Competed against teams across the US and member states of the European Space Agency
 	      </ul>
 	    </div>
@@ -184,11 +181,11 @@
 	      <h3>Humanities Experience</h3>
 	    </div>
 	    <div class="col1" style="width:70%">
-	      <b>Humanities Studio Fellowship</b> (2023-2024)
+	      <b>Humanities Studio</b> (2023-2024)
 	      <span style="float:right;"><i>Claremont, CA</i></span>
 	      <br><i>Undergraduate Student Fellow</i>
 	      <ul>
-		<li>One of six students awarded the undergraduate fellows program, an engagement for senior thesis research through a series of weekly seminar discussions, as well as to participate in the Studio’s program of visiting speakers, professional development workshops, and other campus and community events.
+		<li>One of six students awarded the undergraduate fellows program, an engagement for senior thesis research through a series of weekly seminar discussions and participation in the Studio’s program of visiting speakers, professional development workshops, and other campus and community events.
 		<li>Engaged in interdisicplinary discussion of the 2023-2024 theme of "Joy"
 	      </ul>
 	      <b>Pomona College Linguistics & Chinese Department</b> (2020-2021)
@@ -294,7 +291,7 @@
 		<img src="img/footer/gm.png" height="30px;" width="30px;">
 	      </a>
 	    </div>
-	    <br>&copy;Yaru Luo || 2023
+	    <br>made with love by Yaru Luo
 	  </div>
 	  
 	</div>
